@@ -1,3 +1,8 @@
+2013-03-10  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/55362
+	* gfortran.dg/intrinsic_size_4.f90 : New test.
+
 2013-03-09  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/56534
